--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/logo_48x48.png" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/AutoBizz Logo for Browser-09.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AutoBizz E-store</title>
   </head>
